# stato

./: .gitignore  LICENSE  README.md  TESTING.md  USAGE.md  pyproject.toml
docs/: TECHNICAL_REPORT.md
docs/registry/: index.toml
src/stato/: __init__.py  __main__.py  cli.py  prompts.py
src/stato/bridge/: base.py  claude_code.py  codex.py  cursor.py  generic.py
src/stato/core/: bundle.py  compiler.py  composer.py  converter.py  differ.py  merger.py  module.py  privacy.py  registry.py  resume.py  state_manager.py
src/stato/modules/: context.py  memory.py  plan.py  skill.py
tests/: conftest.py  fixtures.py  test_bundle.py  test_compiler.py  test_convert.py  test_diff.py  test_integration.py  test_merge.py  test_privacy.py  test_registry.py  test_resume.py  test_structural.py
